# price-estimator

./: .gitignore  CLAUDE.md  COMPARISON.md  Dockerfile  INSTRUCTIONS.md  PLAN.md  PREDICTION_BANDS.md  README.md  REVIEW.md  TODO.md  TODO_PRODUCT_REVIEW.md  TOOLING.md  agent_001.md  agent_002.md  lambda_handler.py  plan_review_feedback.md  pyproject.toml  requirements-lambda.txt  requirements.txt
docs/: PLAN.md  VALIDATION_PLAN.md  api-design.md  api-guide.md  aws-architecture.md  deployment-checklist.md  prerequisites.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: .gitignore  app.py  cdk.json  requirements.txt  resource-mapping.json
infra/stacks/: price_estimator_stack.py
outputs/models/: M0.joblib  M1.joblib  M2.joblib  M3a.joblib  M3b.joblib  M4.joblib  M5.joblib  M6.joblib  M6b.joblib  M7.joblib  M7b.joblib  M7c.joblib  M8.joblib  M9.joblib
outputs/results/: comparison_report.json  comparison_scorecard.txt  cv_fold_results.csv  cv_results.csv  data_profile.json  estimator_bias.json  hypothesis_resolution.csv  model_comparison.csv  prediction_bands.json  significance_tests.csv  significance_tests_permutation.csv  significance_tests_wilcoxon.csv  (+1 more)
part-2/: Strategic Prioritization Proposal.md
resources/: aora_historical_quotes.csv
scripts/: _batch_assess.py  bias_analysis.py  compare.py  deploy.sh  eda.py  evaluate.py  predict_one.py  serve.py  train.py
tests/: conftest.py  test_api.py  test_bias.py  test_comparison.py  test_data.py  test_features.py  test_models.py  test_predict.py
(+19 files in other folders)
