[project]
name = "price-estimator"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0,<3",
    "numpy>=1.26,<2",
    "scikit-learn>=1.4,<2",
    "xgboost>=2.0,<3",
    "lightgbm>=4.0,<5",
    "optuna>=3.5,<4",
    "shap>=0.44,<1",
    "mapie>=0.8,<1",
    "rapidfuzz>=3.0,<4",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.0,<3",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "scipy>=1.12,<2",
    "joblib>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "httpx>=0.27",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that train models (deselect with '-m \"not slow\"')",
    "integration: marks tests using the full 510-row dataset",
    "api: marks API endpoint tests",
]
